# openrouter_wrapper

./: README.md  pyproject.toml
scripts/: 03_judge_openrouter_CoT.py  03_openrouter_topk.ipynb  104_search_all_openrouter_logprobs.ipynb
src/openrouter_wrapper/: logprobs.py  models.py  retry.py  soft_structure.py
src/openrouter_wrapper/open_router/: __init__.py  logprobs.py  models.py  retry.py
tests/: __init__.py  test_integration_logprobs.py  test_integration_soft.py  test_retry.py
